clutter/evdev: Avoid losing key repeat timestamp resolution

Commit 9214d5029c630e6ed8fd9793f6bcb0a0ae451576 changed the notify*
API to use microseconds and we already have a microsecond time source
here so we can use the timestamp directly without losing resolution at
this layer.

https://bugzilla.gnome.org/show_bug.cgi?id=774989