clutter/clutter/evdev/clutter-seat-evdev.c
@@ -186,15 +186,13 @@ keyboard_repeat (gpointer data)
 {
   ClutterSeatEvdev *seat = data;
   GSource *source;
-  guint32 time_ms;
 
   g_return_val_if_fail (seat->repeat_device != NULL, G_SOURCE_REMOVE);
   source = g_main_context_find_source_by_id (NULL, seat->repeat_timer);
-  time_ms = g_source_get_time (source) / 1000;
 
   clutter_seat_evdev_notify_key (seat,
                                  seat->repeat_device,
-                                 ms2us (time_ms),
+                                 g_source_get_time (source),
                                  seat->repeat_key,
                                  AUTOREPEAT_VALUE,
                                  FALSE);
